2006-12-23  Akim Demaille  <demaille@gostai.com>

	Fix multiple definitions
	* src/uast.hh (UAst::UAst): inline the implementation.

2006-12-23  Akim Demaille  <demaille@gostai.com>

	Simplify UCommand uses
	* src/ucommand.cc: Don't qualify when used by the definer.
	* src/uconnection.cc: Fix C++ -> C of strings.

2006-12-23  Akim Demaille  <demaille@gostai.com>

	Update UConnection::sendf
	* src/uconnection.hh, src/uconnection.cc (sendf): Take a string, not
	a char*.
	Add one for va_list.
	* src/ucommand.hh, src/ucommand.cc: Adjust.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Add location to UCommands
	* src/uast.hh: New.
	* src/Makefile.am: Adjust.
	* src/ucommand.hh (UCommand): Derive from UAst.
	Adjust all dependencies.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Update test framework
	* configure.ac: Adjust.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Store all the parsed file names
	* src/parser/uparser.hh, src/parser/uparser.cc (files, files_):
	New.
	(filename_): Now a pointer.
	* src/parser/bison/ugrammar.y: Let the locations' file names be
	const.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Coding style changes
	* src/ucommand.cc: here.
	(kind): New.
	Use it.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Less headers
	* src/userver.hh: Do not include ubinder.hh to lighten the
	dependencies.
	* src/ucommand.cc, src/uconnection.cc, src/uobj.cc,
	* src/uvariable.cc: do it.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Update tests
	* Makefile.am: Fix.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Missing include
	* src/uvariable.cc (ubinary.hh): Include it.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Prepare for new tests/
	This checkin probably does not work, but is needed to serialize
	complex svn directory changes.
	* tests: Remove.
	Will be replaced by an svn:externals onto urbivalid.
	* configure.ac: tests/ is now a package, not a simple subdir.

2006-12-22  Akim Demaille  <demaille@gostai.com>
