@@ -1,5 +1,10 @@
 2006-12-23  Akim Demaille  <demaille@gostai.com>
 
+	More sendf
+	* src/ucommand.cc: Use more sendf than send.
+
+2006-12-23  Akim Demaille  <demaille@gostai.com>
+
 	Fix multiple definitions
 	* src/uast.hh (UAst::UAst): inline the implementation.
 
